--- a/x360ce.App.Beta/Controls/OptionsRemoteControllerControl.xaml
+++ b/x360ce.App.Beta/Controls/OptionsRemoteControllerControl.xaml
@@ -2,10 +2,9 @@
 	x:Class="x360ce.App.Controls.OptionsRemoteControllerControl"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:controls="clr-namespace:x360ce.App.Controls"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:x360ce.App.Controls"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
 	Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"
 	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
@@ -48,8 +47,8 @@
 					Grid.Row="2"
 					Grid.Column="0"
 					Content="UDP Server Port" />
-				<xctk:IntegerUpDown
-					Name="RemotePortNumericUpDown"
+				<controls:NumericUpDown
+					x:Name="RemotePortNumericUpDown"
 					Grid.Row="2"
 					Grid.Column="1"
 					MinWidth="75"
