--- a/x360ce.App.Beta/Controls/AxisMapControl.xaml
+++ b/x360ce.App.Beta/Controls/AxisMapControl.xaml
@@ -2,10 +2,9 @@
 	x:Class="x360ce.App.Controls.AxisMapControl"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:controls="clr-namespace:x360ce.App.Controls"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:x360ce.App.Controls"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
 	Loaded="UserControl_Loaded"
 	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
@@ -204,8 +203,8 @@
 								IsReadOnly="True"
 								IsTabStop="False"
 								Text="0 %" />
-							<xctk:IntegerUpDown
-								Name="AntiDeadZoneUpDown"
+							<controls:NumericUpDown
+								x:Name="AntiDeadZoneUpDown"
 								MinWidth="75"
 								VerticalAlignment="Center"
 								Value="0" />
@@ -223,8 +222,8 @@
 								IsReadOnly="True"
 								IsTabStop="False"
 								Text="0 %" />
-							<xctk:IntegerUpDown
-								Name="DeadZoneUpDown"
+							<controls:NumericUpDown
+								x:Name="DeadZoneUpDown"
 								MinWidth="75"
 								VerticalAlignment="Center"
 								Value="0" />
@@ -242,8 +241,8 @@
 								IsReadOnly="True"
 								IsTabStop="False"
 								Text="0 %" />
-							<xctk:IntegerUpDown
-								Name="LinearUpDown"
+							<controls:NumericUpDown
+								x:Name="LinearUpDown"
 								MinWidth="75"
 								VerticalAlignment="Center"
 								ValueChanged="LinearUpDown_ValueChanged"
