--- a/x360ce.App.Beta/Controls/OptionsInternetControl.xaml
+++ b/x360ce.App.Beta/Controls/OptionsInternetControl.xaml
@@ -2,10 +2,9 @@
 	x:Class="x360ce.App.Controls.OptionsInternetControl"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:controls="clr-namespace:x360ce.App.Controls"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:x360ce.App.Controls"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
 	d:DesignHeight="440"
 	d:DesignWidth="640"
 	Unloaded="UserControl_Unloaded"
@@ -55,7 +54,7 @@
 						Default Settings Minimum Instances
 					</Label>
 					<StackPanel Orientation="Horizontal">
-						<xctk:IntegerUpDown Name="GetProgramsMinInstancesUpDown" MinWidth="75" />
+						<controls:NumericUpDown x:Name="GetProgramsMinInstancesUpDown" MinWidth="75" />
 						<CheckBox Name="GetProgramsIncludeEnabledCheckBox">
 							Include Enabled
 						</CheckBox>
