--- a/x360ce.App.Beta/Controls/PadItem_DPadControl.xaml
+++ b/x360ce.App.Beta/Controls/PadItem_DPadControl.xaml
@@ -2,9 +2,9 @@
 	x:Class="x360ce.App.Controls.PadItem_DPadControl"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:controls="clr-namespace:x360ce.App.Controls"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
 	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
 	<GroupBox HorizontalAlignment="Left" VerticalAlignment="Top" Header="Axis to D-Pad">
@@ -28,8 +28,8 @@
 							IsReadOnly="True"
 							IsTabStop="False"
 							Text="0 %" />
-						<xctk:IntegerUpDown
-							Name="DeadZoneUpDown"
+						<controls:NumericUpDown
+							x:Name="DeadZoneUpDown"
 							MinWidth="75"
 							VerticalAlignment="Center"
 							Value="0" />
@@ -48,8 +48,8 @@
 							IsReadOnly="True"
 							IsTabStop="False"
 							Text="0 %" />
-						<xctk:IntegerUpDown
-							Name="OffsetUpDown"
+						<controls:NumericUpDown
+							x:Name="OffsetUpDown"
 							MinWidth="75"
 							VerticalAlignment="Center"
 							Value="0" />
