--- a/x360ce.App.Beta/Controls/PadItem_ForceFeedbackControl.xaml
+++ b/x360ce.App.Beta/Controls/PadItem_ForceFeedbackControl.xaml
@@ -3,9 +3,8 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:x360ce.App.Controls"
+	xmlns:controls="clr-namespace:x360ce.App.Controls"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
 	d:DesignHeight="500"
 	d:DesignWidth="800"
 	Unloaded="UserControl_Unloaded"
@@ -38,8 +37,8 @@
 							IsReadOnly="True"
 							IsTabStop="False"
 							Text="0 %" />
-						<xctk:IntegerUpDown
-							Name="StrengthUpDown"
+						<controls:NumericUpDown
+							x:Name="StrengthUpDown"
 							MinWidth="75"
 							VerticalAlignment="Center"
 							Value="0" />
@@ -65,12 +64,12 @@
 			</StackPanel>
 		</GroupBox>
 
-		<local:PadItem_ForceFeedback_MotorControl
+		<controls:PadItem_ForceFeedback_MotorControl
 			x:Name="LeftForceFeedbackMotorPanel"
 			Grid.Row="1"
 			Grid.Column="0"
 			x:FieldModifier="public" />
-		<local:PadItem_ForceFeedback_MotorControl
+		<controls:PadItem_ForceFeedback_MotorControl
 			x:Name="RightForceFeedbackMotorPanel"
 			Grid.Row="1"
 			Grid.Column="1"
