--- a/x360ce.App.Beta/Controls/PadItem_ForceFeedback_MotorControl.xaml
+++ b/x360ce.App.Beta/Controls/PadItem_ForceFeedback_MotorControl.xaml
@@ -2,9 +2,9 @@
 	x:Class="x360ce.App.Controls.PadItem_ForceFeedback_MotorControl"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:controls="clr-namespace:x360ce.App.Controls"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
 	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
 	<GroupBox
@@ -40,8 +40,8 @@
 						IsReadOnly="True"
 						IsTabStop="False"
 						Text="0 %" />
-					<xctk:IntegerUpDown
-						Name="StrengthUpDown"
+					<controls:NumericUpDown
+						x:Name="StrengthUpDown"
 						MinWidth="75"
 						VerticalAlignment="Center"
 						Value="0" />
@@ -59,8 +59,8 @@
 						IsReadOnly="True"
 						IsTabStop="False"
 						Text="0 %" />
-					<xctk:IntegerUpDown
-						Name="PeriodUpDown"
+					<controls:NumericUpDown
+						x:Name="PeriodUpDown"
 						MinWidth="75"
 						VerticalAlignment="Center"
 						Value="0" />
@@ -78,8 +78,8 @@
 						IsReadOnly="True"
 						IsTabStop="False"
 						Text="0 %" />
-					<xctk:IntegerUpDown
-						Name="TestUpDown"
+					<controls:NumericUpDown
+						x:Name="TestUpDown"
 						MinWidth="75"
 						VerticalAlignment="Center"
 						Value="0" />
