--- a/x360ce.App.Beta/Controls/ProgramItemControl.xaml
+++ b/x360ce.App.Beta/Controls/ProgramItemControl.xaml
@@ -2,10 +2,9 @@
 	x:Class="x360ce.App.Controls.ProgramItemControl"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:controls="clr-namespace:x360ce.App.Controls"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:x360ce.App.Controls"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
 	d:DesignWidth="800"
 	mc:Ignorable="d">
 	<Grid>
@@ -121,7 +120,7 @@
 							Grid.Column="1"
 							VerticalAlignment="Center"
 							Orientation="Horizontal">
-							<xctk:IntegerUpDown Name="HookModeFakeVidNumericUpDown" MinWidth="75" VerticalAlignment="Center" />
+							<controls:NumericUpDown x:Name="HookModeFakeVidNumericUpDown" MinWidth="75" VerticalAlignment="Center" />
 							<TextBox Name="HookModeFakeVidTextBox" MinWidth="75" IsReadOnly="True" />
 						</StackPanel>
 						<Label
@@ -134,7 +133,7 @@
 							Grid.Column="3"
 							VerticalAlignment="Center"
 							Orientation="Horizontal">
-							<xctk:IntegerUpDown Name="HookModeFakePidNumericUpDown" MinWidth="75" VerticalAlignment="Center" />
+							<controls:NumericUpDown x:Name="HookModeFakePidNumericUpDown" MinWidth="75" VerticalAlignment="Center" />
 							<TextBox Name="HookModeFakePidTextBox" MinWidth="75" IsReadOnly="True" />
 						</StackPanel>
 						<TextBox
@@ -155,8 +154,8 @@
 							Grid.Row="0"
 							Grid.Column="4"
 							Content="Timeout" />
-						<xctk:IntegerUpDown
-							Name="TimeoutNumericUpDown"
+						<controls:NumericUpDown
+							x:Name="TimeoutNumericUpDown"
 							Grid.Row="0"
 							Grid.Column="5"
 							MinWidth="75"
