--- a/x360ce.App.Beta/Controls/AxisMapControl.xaml
+++ b/x360ce.App.Beta/Controls/AxisMapControl.xaml
@@ -2,6 +2,7 @@
 	x:Class="x360ce.App.Controls.AxisMapControl"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:JcControls="clr-namespace:JocysCom.ClassLibrary.Controls;assembly=x360ce.Engine"
 	xmlns:controls="clr-namespace:x360ce.App.Controls"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -203,7 +204,7 @@
 								IsReadOnly="True"
 								IsTabStop="False"
 								Text="0 %" />
-							<controls:NumericUpDown
+							<JcControls:NumericUpDown
 								x:Name="AntiDeadZoneUpDown"
 								MinWidth="75"
 								VerticalAlignment="Center"
@@ -222,7 +223,7 @@
 								IsReadOnly="True"
 								IsTabStop="False"
 								Text="0 %" />
-							<controls:NumericUpDown
+							<JcControls:NumericUpDown
 								x:Name="DeadZoneUpDown"
 								MinWidth="75"
 								VerticalAlignment="Center"
@@ -241,7 +242,7 @@
 								IsReadOnly="True"
 								IsTabStop="False"
 								Text="0 %" />
-							<controls:NumericUpDown
+							<JcControls:NumericUpDown
 								x:Name="LinearUpDown"
 								MinWidth="75"
 								VerticalAlignment="Center"
