--- a/x360ce.App.Beta/Controls/AxisToButtonControl.xaml
+++ b/x360ce.App.Beta/Controls/AxisToButtonControl.xaml
@@ -2,8 +2,8 @@
 	x:Class="x360ce.App.Controls.AxisToButtonControl"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:JcControls="clr-namespace:JocysCom.ClassLibrary.Controls;assembly=x360ce.Engine"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:controls="clr-namespace:x360ce.App.Controls"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
@@ -61,7 +61,11 @@
 			VerticalAlignment="Center"
 			LargeChange="10"
 			Maximum="100" />
-		<controls:NumericUpDown x:Name="DeadZoneNumericUpDown" MinWidth="75" VerticalAlignment="Center" Value="0" />
+		<JcControls:NumericUpDown
+			x:Name="DeadZoneNumericUpDown"
+			MinWidth="75"
+			VerticalAlignment="Center"
+			Value="0" />
 		<TextBox
 			Name="DeadZoneTextBox"
 			Width="43"
