--- a/x360ce.App.Beta/Controls/OptionsInternetControl.xaml
+++ b/x360ce.App.Beta/Controls/OptionsInternetControl.xaml
@@ -2,7 +2,7 @@
 	x:Class="x360ce.App.Controls.OptionsInternetControl"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:controls="clr-namespace:x360ce.App.Controls"
+	xmlns:JcControls="clr-namespace:JocysCom.ClassLibrary.Controls;assembly=x360ce.Engine"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	d:DesignHeight="440"
@@ -54,7 +54,7 @@
 						Default Settings Minimum Instances
 					</Label>
 					<StackPanel Orientation="Horizontal">
-						<controls:NumericUpDown x:Name="GetProgramsMinInstancesUpDown" MinWidth="75" />
+						<JcControls:NumericUpDown x:Name="GetProgramsMinInstancesUpDown" MinWidth="75" />
 						<CheckBox Name="GetProgramsIncludeEnabledCheckBox">
 							Include Enabled
 						</CheckBox>
