--- a/x360ce.App.Beta/Controls/OptionsRemoteControllerControl.xaml
+++ b/x360ce.App.Beta/Controls/OptionsRemoteControllerControl.xaml
@@ -2,7 +2,7 @@
 	x:Class="x360ce.App.Controls.OptionsRemoteControllerControl"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:controls="clr-namespace:x360ce.App.Controls"
+	xmlns:JcControls="clr-namespace:JocysCom.ClassLibrary.Controls;assembly=x360ce.Engine"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"
@@ -47,7 +47,7 @@
 					Grid.Row="2"
 					Grid.Column="0"
 					Content="UDP Server Port" />
-				<controls:NumericUpDown
+				<JcControls:NumericUpDown
 					x:Name="RemotePortNumericUpDown"
 					Grid.Row="2"
 					Grid.Column="1"
