--- a/x360ce.App.Beta/Controls/PadItem_DPadControl.xaml
+++ b/x360ce.App.Beta/Controls/PadItem_DPadControl.xaml
@@ -2,6 +2,7 @@
 	x:Class="x360ce.App.Controls.PadItem_DPadControl"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:JcControls="clr-namespace:JocysCom.ClassLibrary.Controls;assembly=x360ce.Engine"
 	xmlns:controls="clr-namespace:x360ce.App.Controls"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -28,7 +29,7 @@
 							IsReadOnly="True"
 							IsTabStop="False"
 							Text="0 %" />
-						<controls:NumericUpDown
+						<JcControls:NumericUpDown
 							x:Name="DeadZoneUpDown"
 							MinWidth="75"
 							VerticalAlignment="Center"
@@ -48,7 +49,7 @@
 							IsReadOnly="True"
 							IsTabStop="False"
 							Text="0 %" />
-						<controls:NumericUpDown
+						<JcControls:NumericUpDown
 							x:Name="OffsetUpDown"
 							MinWidth="75"
 							VerticalAlignment="Center"
