--- a/x360ce.App.Beta/Controls/PadItem_ForceFeedbackControl.xaml
+++ b/x360ce.App.Beta/Controls/PadItem_ForceFeedbackControl.xaml
@@ -2,8 +2,9 @@
 	x:Class="x360ce.App.Controls.PadItem_ForceFeedbackControl"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:JcControls="clr-namespace:JocysCom.ClassLibrary.Controls;assembly=x360ce.Engine"
 	xmlns:controls="clr-namespace:x360ce.App.Controls"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	d:DesignHeight="500"
 	d:DesignWidth="800"
@@ -37,7 +38,7 @@
 							IsReadOnly="True"
 							IsTabStop="False"
 							Text="0 %" />
-						<controls:NumericUpDown
+						<JcControls:NumericUpDown
 							x:Name="StrengthUpDown"
 							MinWidth="75"
 							VerticalAlignment="Center"
