--- a/x360ce.App.Beta/Controls/PadItem_ForceFeedback_MotorControl.xaml
+++ b/x360ce.App.Beta/Controls/PadItem_ForceFeedback_MotorControl.xaml
@@ -2,7 +2,7 @@
 	x:Class="x360ce.App.Controls.PadItem_ForceFeedback_MotorControl"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:controls="clr-namespace:x360ce.App.Controls"
+	xmlns:JcControls="clr-namespace:JocysCom.ClassLibrary.Controls;assembly=x360ce.Engine"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	Unloaded="UserControl_Unloaded"
@@ -40,7 +40,7 @@
 						IsReadOnly="True"
 						IsTabStop="False"
 						Text="0 %" />
-					<controls:NumericUpDown
+					<JcControls:NumericUpDown
 						x:Name="StrengthUpDown"
 						MinWidth="75"
 						VerticalAlignment="Center"
@@ -59,7 +59,7 @@
 						IsReadOnly="True"
 						IsTabStop="False"
 						Text="0 %" />
-					<controls:NumericUpDown
+					<JcControls:NumericUpDown
 						x:Name="PeriodUpDown"
 						MinWidth="75"
 						VerticalAlignment="Center"
@@ -78,7 +78,7 @@
 						IsReadOnly="True"
 						IsTabStop="False"
 						Text="0 %" />
-					<controls:NumericUpDown
+					<JcControls:NumericUpDown
 						x:Name="TestUpDown"
 						MinWidth="75"
 						VerticalAlignment="Center"
