--- a/x360ce.App.Beta/Controls/ProgramItemControl.xaml
+++ b/x360ce.App.Beta/Controls/ProgramItemControl.xaml
@@ -2,7 +2,7 @@
 	x:Class="x360ce.App.Controls.ProgramItemControl"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:controls="clr-namespace:x360ce.App.Controls"
+	xmlns:JcControls="clr-namespace:JocysCom.ClassLibrary.Controls;assembly=x360ce.Engine"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	d:DesignWidth="800"
@@ -120,7 +120,7 @@
 							Grid.Column="1"
 							VerticalAlignment="Center"
 							Orientation="Horizontal">
-							<controls:NumericUpDown x:Name="HookModeFakeVidNumericUpDown" MinWidth="75" VerticalAlignment="Center" />
+							<JcControls:NumericUpDown x:Name="HookModeFakeVidNumericUpDown" MinWidth="75" VerticalAlignment="Center" />
 							<TextBox Name="HookModeFakeVidTextBox" MinWidth="75" IsReadOnly="True" />
 						</StackPanel>
 						<Label
@@ -133,7 +133,7 @@
 							Grid.Column="3"
 							VerticalAlignment="Center"
 							Orientation="Horizontal">
-							<controls:NumericUpDown x:Name="HookModeFakePidNumericUpDown" MinWidth="75" VerticalAlignment="Center" />
+							<JcControls:NumericUpDown x:Name="HookModeFakePidNumericUpDown" MinWidth="75" VerticalAlignment="Center" />
 							<TextBox Name="HookModeFakePidTextBox" MinWidth="75" IsReadOnly="True" />
 						</StackPanel>
 						<TextBox
@@ -154,7 +154,7 @@
 							Grid.Row="0"
 							Grid.Column="4"
 							Content="Timeout" />
-						<controls:NumericUpDown
+						<JcControls:NumericUpDown
 							x:Name="TimeoutNumericUpDown"
 							Grid.Row="0"
 							Grid.Column="5"
