--- a/x360ce.Engine/JocysCom/Controls/NumericUpDown.xaml
+++ b/x360ce.Engine/JocysCom/Controls/NumericUpDown.xaml
@@ -1,18 +1,20 @@
 ﻿<UserControl
-	x:Class="x360ce.App.Controls.NumericUpDown"
+	x:Class="JocysCom.ClassLibrary.Controls.NumericUpDown"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:x360ce.App.Controls"
+	xmlns:local="clr-namespace:JocysCom.ClassLibrary.Controls"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	x:Name="This"
 	Margin="0"
 	Padding="0"
-	Background="AliceBlue"
 	Loaded="UserControl_Loaded"
+	SnapsToDevicePixels="True"
 	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
 	<UserControl.Resources>
-		<local:NumericUpDownConverter x:Key="_NumericUpDownConverter" />
+		<local:NumericUpDownStyleConverter x:Key="_NumericUpDownStyleConverter" />
+		<local:NumericUpDownValueConverter x:Key="_NumericUpDownValueConverter" />
 	</UserControl.Resources>
 	<Grid Background="{DynamicResource {x:Static SystemColors.WindowFrameBrushKey}}">
 		<Grid.ColumnDefinitions>
@@ -23,36 +25,57 @@
 			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
 		<TextBox
-			x:Name="TextBox"
+			x:Name="TBox"
 			MinWidth="75"
 			Margin="0"
 			VerticalAlignment="Center"
 			x:FieldModifier="public"
-			BorderThickness="0"
+			MouseWheel="TBox_MouseWheel"
+			PreviewKeyDown="TBox_PreviewKeyDown"
 			SizeChanged="TextBox_SizeChanged"
-			Text="{Binding Path=Value, Mode=TwoWay}"
 			TextAlignment="Right"
-			TextChanged="TxtNum_TextChanged" />
+			TextChanged="TBox_TextChanged">
+			<TextBox.Text>
+				<Binding
+					Converter="{StaticResource _NumericUpDownValueConverter}"
+					ElementName="This"
+					Mode="TwoWay"
+					Path="Value">
+					<Binding.ValidationRules>
+						<local:NumericUpDownValidationRule />
+					</Binding.ValidationRules>
+				</Binding>
+			</TextBox.Text>
+		</TextBox>
 		<Grid
 			x:Name="ButtonsGrid"
-			Width="{Binding ElementName=TextBox, Path=ActualHeight, Mode=OneWay, Converter={StaticResource _NumericUpDownConverter}, ConverterParameter=-2}"
-			Height="{Binding ElementName=TextBox, Path=ActualHeight, Mode=OneWay, Converter={StaticResource _NumericUpDownConverter}, ConverterParameter=-2}"
+			Width="{Binding ElementName=TBox, Path=ActualHeight, Mode=OneWay, Converter={StaticResource _NumericUpDownStyleConverter}, ConverterParameter=-2}"
+			Height="{Binding ElementName=TBox, Path=ActualHeight, Mode=OneWay, Converter={StaticResource _NumericUpDownStyleConverter}, ConverterParameter=-2}"
 			HorizontalAlignment="Right"
 			Background="Transparent">
 			<Grid.RowDefinitions>
 				<RowDefinition Height="*" />
-				<RowDefinition Height="1" />
+				<RowDefinition Height="0" />
 				<RowDefinition Height="*" />
 			</Grid.RowDefinitions>
 			<Button
-				x:Name="cmdUp"
+				x:Name="UpButton"
 				MinWidth="0"
 				Margin="0,0,1,0"
 				Padding="2"
 				HorizontalAlignment="Stretch"
 				VerticalAlignment="Stretch"
 				BorderThickness="0"
-				Click="CmdUp_Click">
+				Click="UpButton_Click"
+				Focusable="False"
+				IsTabStop="False">
+				<Button.Background>
+					<LinearGradientBrush StartPoint="1,0" EndPoint="1,1">
+						<GradientStop Offset="0" Color="{DynamicResource {x:Static SystemColors.ControlColorKey}}" />
+						<GradientStop Offset="1" Color="{DynamicResource {x:Static SystemColors.ControlLightColorKey}}" />
+					</LinearGradientBrush>
+				</Button.Background>
+
 				<Button.Content>
 					<Viewbox HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 						<Canvas Width="100" Height="100">
@@ -62,7 +85,7 @@
 				</Button.Content>
 			</Button>
 			<Button
-				x:Name="cmdDown"
+				x:Name="DownButton"
 				Grid.Row="2"
 				MinWidth="0"
 				Margin="0,0,1,0"
@@ -70,7 +93,15 @@
 				HorizontalAlignment="Stretch"
 				VerticalAlignment="Stretch"
 				BorderThickness="0"
-				Click="CmdDown_Click">
+				Click="DownButton_Click"
+				Focusable="False"
+				IsTabStop="False">
+				<Button.Background>
+					<LinearGradientBrush StartPoint="1,0" EndPoint="1,1">
+						<GradientStop Offset="0" Color="{DynamicResource {x:Static SystemColors.ControlColorKey}}" />
+						<GradientStop Offset="1" Color="{DynamicResource {x:Static SystemColors.ControlLightColorKey}}" />
+					</LinearGradientBrush>
+				</Button.Background>
 				<Button.Content>
 					<Viewbox HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 						<Canvas Width="100" Height="100">
@@ -79,8 +110,6 @@
 					</Viewbox>
 				</Button.Content>
 			</Button>
-
 		</Grid>
-
 	</Grid>
 </UserControl>
