--- a/x360ce.App.Beta/Controls/ProgramListControl.xaml
+++ b/x360ce.App.Beta/Controls/ProgramListControl.xaml
@@ -6,8 +6,10 @@
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:local="clr-namespace:x360ce.App.Controls"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	x:Name="This"
 	d:DesignHeight="120"
 	d:DesignWidth="480"
+	Loaded="UserControl_Loaded"
 	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
 	<Grid VerticalAlignment="Stretch">
