--- a/x360ce.Engine/JocysCom/Controls/Themes/Default.xaml
+++ b/x360ce.Engine/JocysCom/Controls/Themes/Default.xaml
@@ -8,6 +8,36 @@
 
 	<SolidColorBrush x:Key="SolidColorBrush_BFF">#ff000000</SolidColorBrush>
 
+	<!--  HUE Color Degrees - Light (hue: X, saturation: 10, lightness: 100)  -->
+
+	<SolidColorBrush x:Key="SolidColorBrush_000L">#FFE6E6</SolidColorBrush>
+	<SolidColorBrush x:Key="SolidColorBrush_030L">#FFF2E6</SolidColorBrush>
+	<SolidColorBrush x:Key="SolidColorBrush_060L">#FFFFE6</SolidColorBrush>
+	<SolidColorBrush x:Key="SolidColorBrush_090L">#F2FFE6</SolidColorBrush>
+	<SolidColorBrush x:Key="SolidColorBrush_120L">#E6FFE6</SolidColorBrush>
+	<SolidColorBrush x:Key="SolidColorBrush_150L">#E6FFF2</SolidColorBrush>
+	<SolidColorBrush x:Key="SolidColorBrush_180L">#E6FFFF</SolidColorBrush>
+	<SolidColorBrush x:Key="SolidColorBrush_210L">#E6F2FF</SolidColorBrush>
+	<SolidColorBrush x:Key="SolidColorBrush_240L">#E6E6FF</SolidColorBrush>
+	<SolidColorBrush x:Key="SolidColorBrush_270L">#F2E6FF</SolidColorBrush>
+	<SolidColorBrush x:Key="SolidColorBrush_300L">#FFE6FF</SolidColorBrush>
+	<SolidColorBrush x:Key="SolidColorBrush_330L">#FFE6F2</SolidColorBrush>
+
+	<!--  HUE Color Degrees - Dark (hue: X, saturation: 100, lightness: 42)  -->
+
+	<SolidColorBrush x:Key="SolidColorBrush_000D">#D60000</SolidColorBrush>
+	<SolidColorBrush x:Key="SolidColorBrush_030D">#D66700</SolidColorBrush>
+	<SolidColorBrush x:Key="SolidColorBrush_060D">#D6D600</SolidColorBrush>
+	<SolidColorBrush x:Key="SolidColorBrush_090D">#67D600</SolidColorBrush>
+	<SolidColorBrush x:Key="SolidColorBrush_120D">#00D600</SolidColorBrush>
+	<SolidColorBrush x:Key="SolidColorBrush_150D">#00D667</SolidColorBrush>
+	<SolidColorBrush x:Key="SolidColorBrush_180D">#00D6D6</SolidColorBrush>
+	<SolidColorBrush x:Key="SolidColorBrush_210D">#0067D6</SolidColorBrush>
+	<SolidColorBrush x:Key="SolidColorBrush_240D">#0000D6</SolidColorBrush>
+	<SolidColorBrush x:Key="SolidColorBrush_270D">#6700D6</SolidColorBrush>
+	<SolidColorBrush x:Key="SolidColorBrush_300D">#D600D6</SolidColorBrush>
+	<SolidColorBrush x:Key="SolidColorBrush_330D">#D60067</SolidColorBrush>
+
 	<!--  Window  -->
 
 	<Style x:Key="Window_Default" TargetType="Window">
@@ -452,6 +482,181 @@
 		<Setter Property="HorizontalGridLinesBrush" Value="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}" />
 		<Setter Property="VerticalGridLinesBrush" Value="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}" />
 	</Style>
+
+	<!--  Cell HUE Degree Pastel Colours  -->
+
+	<Style x:Key="DataGridCell_D000" TargetType="DataGridCell">
+		<Style.Triggers>
+			<Trigger Property="DataGridCell.IsSelected" Value="True">
+				<Setter Property="Foreground" Value="{StaticResource SolidColorBrush_000L}" />
+				<Setter Property="Background" Value="{StaticResource SolidColorBrush_000D}" />
+				<Setter Property="BorderBrush" Value="{StaticResource SolidColorBrush_000D}" />
+			</Trigger>
+			<Trigger Property="DataGridCell.IsSelected" Value="False">
+				<Setter Property="Background" Value="{StaticResource SolidColorBrush_000L}" />
+				<Setter Property="BorderBrush" Value="{StaticResource SolidColorBrush_000L}" />
+			</Trigger>
+		</Style.Triggers>
+	</Style>
+
+	<Style x:Key="DataGridCell_D030" TargetType="DataGridCell">
+		<Style.Triggers>
+			<Trigger Property="DataGridCell.IsSelected" Value="True">
+				<Setter Property="Foreground" Value="{StaticResource SolidColorBrush_030L}" />
+				<Setter Property="Background" Value="{StaticResource SolidColorBrush_030D}" />
+				<Setter Property="BorderBrush" Value="{StaticResource SolidColorBrush_030D}" />
+			</Trigger>
+			<Trigger Property="DataGridCell.IsSelected" Value="False">
+				<Setter Property="Background" Value="{StaticResource SolidColorBrush_030L}" />
+				<Setter Property="BorderBrush" Value="{StaticResource SolidColorBrush_030L}" />
+			</Trigger>
+		</Style.Triggers>
+	</Style>
+
+	<Style x:Key="DataGridCell_D060" TargetType="DataGridCell">
+		<Style.Triggers>
+			<Trigger Property="DataGridCell.IsSelected" Value="True">
+				<Setter Property="Foreground" Value="{StaticResource SolidColorBrush_060L}" />
+				<Setter Property="Background" Value="{StaticResource SolidColorBrush_060D}" />
+				<Setter Property="BorderBrush" Value="{StaticResource SolidColorBrush_060D}" />
+			</Trigger>
+			<Trigger Property="DataGridCell.IsSelected" Value="False">
+				<Setter Property="Background" Value="{StaticResource SolidColorBrush_060L}" />
+				<Setter Property="BorderBrush" Value="{StaticResource SolidColorBrush_060L}" />
+			</Trigger>
+		</Style.Triggers>
+	</Style>
+
+	<Style x:Key="DataGridCell_D090" TargetType="DataGridCell">
+		<Style.Triggers>
+			<Trigger Property="DataGridCell.IsSelected" Value="True">
+				<Setter Property="Foreground" Value="{StaticResource SolidColorBrush_090L}" />
+				<Setter Property="Background" Value="{StaticResource SolidColorBrush_090D}" />
+				<Setter Property="BorderBrush" Value="{StaticResource SolidColorBrush_090D}" />
+			</Trigger>
+			<Trigger Property="DataGridCell.IsSelected" Value="False">
+				<Setter Property="Background" Value="{StaticResource SolidColorBrush_090L}" />
+				<Setter Property="BorderBrush" Value="{StaticResource SolidColorBrush_090L}" />
+			</Trigger>
+		</Style.Triggers>
+	</Style>
+
+	<Style x:Key="DataGridCell_D120" TargetType="DataGridCell">
+		<Style.Triggers>
+			<Trigger Property="DataGridCell.IsSelected" Value="True">
+				<Setter Property="Foreground" Value="{StaticResource SolidColorBrush_120L}" />
+				<Setter Property="Background" Value="{StaticResource SolidColorBrush_120D}" />
+				<Setter Property="BorderBrush" Value="{StaticResource SolidColorBrush_120D}" />
+			</Trigger>
+			<Trigger Property="DataGridCell.IsSelected" Value="False">
+				<Setter Property="Background" Value="{StaticResource SolidColorBrush_120L}" />
+				<Setter Property="BorderBrush" Value="{StaticResource SolidColorBrush_120L}" />
+			</Trigger>
+		</Style.Triggers>
+	</Style>
+
+	<Style x:Key="DataGridCell_D150" TargetType="DataGridCell">
+		<Style.Triggers>
+			<Trigger Property="DataGridCell.IsSelected" Value="True">
+				<Setter Property="Foreground" Value="{StaticResource SolidColorBrush_150L}" />
+				<Setter Property="Background" Value="{StaticResource SolidColorBrush_150D}" />
+				<Setter Property="BorderBrush" Value="{StaticResource SolidColorBrush_150D}" />
+			</Trigger>
+			<Trigger Property="DataGridCell.IsSelected" Value="False">
+				<Setter Property="Background" Value="{StaticResource SolidColorBrush_150L}" />
+				<Setter Property="BorderBrush" Value="{StaticResource SolidColorBrush_150L}" />
+			</Trigger>
+		</Style.Triggers>
+	</Style>
+
+	<Style x:Key="DataGridCell_D180" TargetType="DataGridCell">
+		<Style.Triggers>
+			<Trigger Property="DataGridCell.IsSelected" Value="True">
+				<Setter Property="Foreground" Value="{StaticResource SolidColorBrush_180L}" />
+				<Setter Property="Background" Value="{StaticResource SolidColorBrush_180D}" />
+				<Setter Property="BorderBrush" Value="{StaticResource SolidColorBrush_180D}" />
+			</Trigger>
+			<Trigger Property="DataGridCell.IsSelected" Value="False">
+				<Setter Property="Background" Value="{StaticResource SolidColorBrush_180L}" />
+				<Setter Property="BorderBrush" Value="{StaticResource SolidColorBrush_180L}" />
+			</Trigger>
+		</Style.Triggers>
+	</Style>
+
+	<Style x:Key="DataGridCell_D210" TargetType="DataGridCell">
+		<Style.Triggers>
+			<Trigger Property="DataGridCell.IsSelected" Value="True">
+				<Setter Property="Foreground" Value="{StaticResource SolidColorBrush_210L}" />
+				<Setter Property="Background" Value="{StaticResource SolidColorBrush_210D}" />
+				<Setter Property="BorderBrush" Value="{StaticResource SolidColorBrush_210D}" />
+			</Trigger>
+			<Trigger Property="DataGridCell.IsSelected" Value="False">
+				<Setter Property="Background" Value="{StaticResource SolidColorBrush_210L}" />
+				<Setter Property="BorderBrush" Value="{StaticResource SolidColorBrush_210L}" />
+			</Trigger>
+		</Style.Triggers>
+	</Style>
+
+
+	<Style x:Key="DataGridCell_D240" TargetType="DataGridCell">
+		<Style.Triggers>
+			<Trigger Property="DataGridCell.IsSelected" Value="True">
+				<Setter Property="Foreground" Value="{StaticResource SolidColorBrush_240L}" />
+				<Setter Property="Background" Value="{StaticResource SolidColorBrush_240D}" />
+				<Setter Property="BorderBrush" Value="{StaticResource SolidColorBrush_240D}" />
+			</Trigger>
+			<Trigger Property="DataGridCell.IsSelected" Value="False">
+				<Setter Property="Background" Value="{StaticResource SolidColorBrush_240L}" />
+				<Setter Property="BorderBrush" Value="{StaticResource SolidColorBrush_240L}" />
+			</Trigger>
+		</Style.Triggers>
+	</Style>
+
+
+	<Style x:Key="DataGridCell_D270" TargetType="DataGridCell">
+		<Style.Triggers>
+			<Trigger Property="DataGridCell.IsSelected" Value="True">
+				<Setter Property="Foreground" Value="{StaticResource SolidColorBrush_270L}" />
+				<Setter Property="Background" Value="{StaticResource SolidColorBrush_270D}" />
+				<Setter Property="BorderBrush" Value="{StaticResource SolidColorBrush_270D}" />
+			</Trigger>
+			<Trigger Property="DataGridCell.IsSelected" Value="False">
+				<Setter Property="Background" Value="{StaticResource SolidColorBrush_270L}" />
+				<Setter Property="BorderBrush" Value="{StaticResource SolidColorBrush_270L}" />
+			</Trigger>
+		</Style.Triggers>
+	</Style>
+
+	<Style x:Key="DataGridCell_D300" TargetType="DataGridCell">
+		<Style.Triggers>
+			<Trigger Property="DataGridCell.IsSelected" Value="True">
+				<Setter Property="Foreground" Value="{StaticResource SolidColorBrush_300L}" />
+				<Setter Property="Background" Value="{StaticResource SolidColorBrush_300D}" />
+				<Setter Property="BorderBrush" Value="{StaticResource SolidColorBrush_300D}" />
+			</Trigger>
+			<Trigger Property="DataGridCell.IsSelected" Value="False">
+				<Setter Property="Background" Value="{StaticResource SolidColorBrush_300L}" />
+				<Setter Property="BorderBrush" Value="{StaticResource SolidColorBrush_300L}" />
+			</Trigger>
+		</Style.Triggers>
+	</Style>
+
+	<Style x:Key="DataGridCell_D330" TargetType="DataGridCell">
+		<Style.Triggers>
+			<Trigger Property="DataGridCell.IsSelected" Value="True">
+				<Setter Property="Foreground" Value="{StaticResource SolidColorBrush_330L}" />
+				<Setter Property="Background" Value="{StaticResource SolidColorBrush_330D}" />
+				<Setter Property="BorderBrush" Value="{StaticResource SolidColorBrush_330D}" />
+			</Trigger>
+			<Trigger Property="DataGridCell.IsSelected" Value="False">
+				<Setter Property="Background" Value="{StaticResource SolidColorBrush_330L}" />
+				<Setter Property="BorderBrush" Value="{StaticResource SolidColorBrush_330L}" />
+			</Trigger>
+		</Style.Triggers>
+	</Style>
+
+
+
 
 	<!--  DataGridTextColumn  -->
 	<!--
