--- a/x360ce.App.Beta/Controls/UserProgramsControl.xaml
+++ b/x360ce.App.Beta/Controls/UserProgramsControl.xaml
@@ -5,8 +5,10 @@
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:local="clr-namespace:x360ce.App.Controls"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	x:Name="This"
 	d:DesignHeight="450"
 	d:DesignWidth="800"
+	Loaded="UserControl_Loaded"
 	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
 	<Grid>
