--- a/x360ce.App.Beta/Controls/PadItem_GeneralControl.xaml
+++ b/x360ce.App.Beta/Controls/PadItem_GeneralControl.xaml
@@ -7,6 +7,7 @@
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	x:Name="This"
 	Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"
+	Loaded="UserControl_Loaded"
 	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
 	<UserControl.Resources>
