--- a/x360ce.App.Beta/Controls/DebugControl.xaml
+++ b/x360ce.App.Beta/Controls/DebugControl.xaml
@@ -9,6 +9,7 @@
 	MinWidth="420"
 	MinHeight="320"
 	Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"
+	Loaded="UserControl_Loaded"
 	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
 	<GroupBox>
