--- a/x360ce.App.Beta/Controls/OptionsInternetControl.xaml
+++ b/x360ce.App.Beta/Controls/OptionsInternetControl.xaml
@@ -7,6 +7,7 @@
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	d:DesignHeight="440"
 	d:DesignWidth="640"
+	Loaded="UserControl_Loaded"
 	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
 	<Grid>
