--- a/x360ce.App.Beta/Controls/PadItem_DPadControl.xaml
+++ b/x360ce.App.Beta/Controls/PadItem_DPadControl.xaml
@@ -6,6 +6,7 @@
 	xmlns:controls="clr-namespace:x360ce.App.Controls"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	Loaded="UserControl_Loaded"
 	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
 	<GroupBox HorizontalAlignment="Left" VerticalAlignment="Top" Header="Axis to D-Pad">
