--- a/x360ce.App.Beta/Controls/PadItem_ForceFeedbackControl.xaml
+++ b/x360ce.App.Beta/Controls/PadItem_ForceFeedbackControl.xaml
@@ -8,6 +8,7 @@
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	d:DesignHeight="500"
 	d:DesignWidth="800"
+	Loaded="UserControl_Loaded"
 	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
 	<Grid>
