--- a/x360ce.App.Beta/Controls/UserSettingListControl.xaml
+++ b/x360ce.App.Beta/Controls/UserSettingListControl.xaml
@@ -8,6 +8,7 @@
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	d:DesignHeight="120"
 	d:DesignWidth="480"
+	Loaded="UserControl_Loaded"
 	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
 	<Grid VerticalAlignment="Stretch">
