Fixing memory leak in Message Box Window.

--- a/x360ce.Engine/JocysCom/Controls/MessageBoxWindow.xaml
+++ b/x360ce.Engine/JocysCom/Controls/MessageBoxWindow.xaml
@@ -8,6 +8,7 @@
 	SizeToContent="WidthAndHeight"
 	Loaded="Window_Loaded"
 	Unloaded="Window_Unloaded"
+	Closed="Window_Closed"
 	mc:Ignorable="d">
 	<Window.Resources>
 		<ResourceDictionary>
