--- a/x360ce.App.Beta/App.xaml
+++ b/x360ce.App.Beta/App.xaml
@@ -8,7 +8,7 @@
 			<ResourceDictionary.MergedDictionaries>
 				<ResourceDictionary Source="/x360ce.Engine;component/JocysCom/Controls/Themes/Default.xaml" />
 				<ResourceDictionary Source="/x360ce.Engine;component/JocysCom/Controls/Themes/Icons.xaml" />
-				<ResourceDictionary Source="Resources/Icons/Icons_Default.xaml" />
+				<ResourceDictionary Source="/x360ce.Engine;component/Resources/Icons/Icons_Default.xaml" />
 			</ResourceDictionary.MergedDictionaries>
 		</ResourceDictionary>
 	</Application.Resources>
